# xwander-plugins

./: .gitignore  README.md  TOOLS_CONSOLIDATION_PLAN.md
.claude-plugin/: plugin.json
xwander-ads/: CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_MIGRATION.md  DELIVERY_SUMMARY.md  PMAX_MODULE_SUMMARY.md  README.md  REPORTING.md  TEST_CLAUDE_CODE.md  setup.py  verify_installation.py
xwander-ads/.claude-plugin/: plugin.json
xwander-ads/agents/: conversion-auditor.md  pmax-optimizer.md  signal-generator.md
xwander-ads/commands/: ads-conversion-sync.md  ads-pmax-list.md  ads-pmax-signals.md  ads-query.md  ads-report.md
xwander-ads/docs/: GAQL_GUIDE.md  PMAX_GUIDE.md  QUICK_REFERENCE.json  SEARCH_GUIDE.md  conversions.md
xwander-ads/examples/: add_search_themes.sh  campaign_overview.sh  conversions_example.py  full_workflow.py  reporting_example.py
xwander-ads/hooks/: hooks.json
xwander-ads/tests/: test_pmax.py  test_reporting.py  test_search.py
xwander-ads/xwander_ads/: __init__.py  auth.py  cli.py  exceptions.py
xwander-airtable/: README.md  setup.py
xwander-airtable/.claude-plugin/: plugin.json
xwander-airtable/docs/: airtable-api-spec.json
xwander-airtable/tests/: __init__.py  test_field_ops.py  test_formula.py  test_transforms.py
xwander-airtable/xwander_airtable/: __init__.py  batch.py  cli.py  client.py  exceptions.py  (+4 more)
xwander-bokun/: README.md  pyproject.toml  setup.py
xwander-bokun/.claude-plugin/: plugin.json
xwander-bokun/examples/: clone_aurora_camp.py
xwander-bokun/skills/: availability-check.md  booking-lookup.md  experience-ops.md  product-catalog.md
xwander-bokun/xwander_bokun/: __init__.py  booking.py  cli.py  client.py  clone.py  experience.py  models.py
xwander-ga4/: BUILD_SUMMARY.md  CHANGELOG.md  CLAUDE.md  INDEX.md  README.md  setup.py
xwander-gsheet/: CHANGELOG.md  MIGRATION_REPORT.md  README.md  pyproject.toml  setup.py
xwander-gsheet/.claude-plugin/: plugin.json
xwander-gsheet/docs/: API.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md
xwander-gsheet/examples/: create_purchase_order.py
xwander-gsheet/skills/: gsheet-ops.md
xwander-gsheet/tests/: __init__.py  conftest.py  test_gsheet.py
xwander-gsheet/xwander_gsheet/: __init__.py  gsheet.py
xwander-gtm/: CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_MIGRATION.md  MIGRATION_SUMMARY.md  README.md  setup.py  verify-migration.sh
(+68 files in other folders)
