[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xwander-gsheet"
version = "2.0.0"
description = "AI-first Google Sheets management with section-based abstraction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "gspread>=5.0.0",
    "google-auth>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xwander_gsheet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
